# SubFlow

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.ps1
.github/workflows/: ci.yml
app/: config.py  main.py
app/dashboard/: db.py  main.py
app/parsers/: gmail_auth.py  gmail_fetcher.py  importer.py  receipt_parser.py
app/webhook/: handlers.py  line_client.py  notifier.py  router.py
database/: models.py  session.py
database/migrations/: env.py
database/migrations/versions/: 20260605_2316-9afad140d8a2_initial_schema.py  20260609_0000-c7d8e9f0a1b2_add_subscribed_since.py
docker/: Dockerfile  entrypoint.sh
docs/: SETUP.md
scripts/: gmail_scan.py
tests/: conftest.py  test_importer.py  test_receipt_parser.py  test_webhook.py
utils/: logger_config.py
