[tool.poetry]
name = "subflow"
version = "0.1.0"
description = "Subscription management automation — Gmail receipts, LINE Bot notifications, Streamlit dashboard"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{ include = "app" }, { include = "utils" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web / API
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

# LINE Bot
line-bot-sdk = "^3.11.0"

# Google / Gmail
google-api-python-client = "^2.134.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"

# Database
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pymysql = "^1.1.0"
cryptography = "^42.0.0"   # required by pymysql for caching_sha2_password

# Dashboard
streamlit = "^1.36.0"

# Config / utilities
python-dotenv = "^1.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
apscheduler = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
black = "^24.4.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"           # async test client for FastAPI

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Ruff ──────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "utils"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line length enforced by black
    "B008",  # FastAPI Depends() in function signatures is the standard pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app", "utils"]

# ── Black ─────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]

# ── Pytest ────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
